--- a/css/main.css
+++ b/css/main.css
@@ -421,25 +421,31 @@ svg {
   line-height: 1.43;
   letter-spacing: 0.08em;
   color: var(--black-color);
+  height: 60px;
   padding-left: 70px;
+  display: flex;
+  align-items: center;
 }
 
 .hero__item:nth-child(1) {
   background-image: url(../../images/student.svg), url(../../images/rectangle.svg);
   background-position: left 13px center, left center;
   background-repeat: no-repeat, no-repeat;
+  background-size: auto auto, 58px 60px;
 }
 
 .hero__item:nth-child(2) {
   background-image: url(../../images/mobile_learning.svg), url(../../images/rectangle.svg);
   background-position: left 10px center, left center;
   background-repeat: no-repeat, no-repeat;
+  background-size: auto auto, 58px 60px;
 }
 
 .hero__item:nth-child(3) {
   background-image: url(../../images/insurance.svg), url(../../images/rectangle.svg);
   background-position: left 12px center, left center;
   background-repeat: no-repeat, no-repeat;
+  background-size: auto auto, 58px 60px;
 }
 
 .hero__item:not(:last-child) {
@@ -478,32 +484,21 @@ svg {
     margin-left: 0;
   }
   .hero__bottom {
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin-top: 50px;
   }
   .hero__list {
     list-style: none;
     width: 100%;
-    height: 60px;
     display: flex;
     align-items: center;
-    margin-left: -30px;
-    margin-top: -30px;
   }
   .hero__item {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.43;
-    letter-spacing: 0.08em;
-    color: var(--black-color);
     padding-left: 70px;
-    margin-left: 30px;
-    margin-top: 30px;
-    flex-basis: calc(100% / 3 - 30px);
-    max-width: 215px;
+    flex: 1 0 calc(33.3% - 20px);
   }
   .hero__item:not(:last-child) {
     margin-bottom: 0;
+    margin-right: 20px;
   }
 }
 
@@ -540,6 +535,32 @@ svg {
     margin-bottom: 40px;
     font-size: 20px;
     line-height: 1.65;
+  }
+  .hero__bottom {
+    margin-top: 93px;
+    margin-bottom: 130px;
+  }
+  .hero__item {
+    font-size: 20px;
+    line-height: 1.65;
+    height: 102px;
+    padding-left: 82px;
+    flex: 1 0 33.3%;
+  }
+  .hero__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .hero__item:nth-child(1) {
+    background-position: left 25px center, left center;
+    background-size: 40px 46px, 100px 102px;
+  }
+  .hero__item:nth-child(2) {
+    background-position: left 22px center, left center;
+    background-size: 48px 47px, 100px 102px;
+  }
+  .hero__item:nth-child(3) {
+    background-position: left 24px center, left center;
+    background-size: 42px 48px, 100px 102px;
   }
 }
 
