--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -98,25 +98,32 @@
       letter-spacing: 0.08em;
       color: var(--black-color);
 
+      height: 60px;
       padding-left: 70px;
+
+      display: flex;
+      align-items: center;
 
       &:nth-child(1) {
          background-image: url(../../images/student.svg),
             url(../../images/rectangle.svg);
          background-position: left 13px center, left center;
          background-repeat: no-repeat, no-repeat;
+         background-size: auto auto, 58px 60px;
       }
       &:nth-child(2) {
          background-image: url(../../images/mobile_learning.svg),
             url(../../images/rectangle.svg);
          background-position: left 10px center, left center;
          background-repeat: no-repeat, no-repeat;
+         background-size: auto auto, 58px 60px;
       }
       &:nth-child(3) {
          background-image: url(../../images/insurance.svg),
             url(../../images/rectangle.svg);
          background-position: left 12px center, left center;
          background-repeat: no-repeat, no-repeat;
+         background-size: auto auto, 58px 60px;
       }
 
       &:not(:last-child) {
@@ -174,36 +181,24 @@
       }
 
       &__bottom {
-         margin-top: 30px;
-         margin-bottom: 50px;
+         margin-top: 50px;
       }
       &__list {
          list-style: none;
          width: 100%;
-         height: 60px;
 
          display: flex;
          align-items: center;
-         margin-left: -30px;
-         margin-top: -30px;
       }
       &__item {
-         font-weight: 700;
-         font-size: 14px;
-         line-height: 1.43;
-         letter-spacing: 0.08em;
-         color: var(--black-color);
-
          padding-left: 70px;
-         margin-left: 30px;
-         margin-top: 30px;
 
-         flex-basis: calc(100% / 3 - 30px);
+         flex: 1 0 calc(33.3% - 20px);
 
          &:not(:last-child) {
             margin-bottom: 0;
+            margin-right: 20px;
          }
-         max-width: 215px;
       }
    }
 }
@@ -260,6 +255,37 @@
 
          font-size: 20px;
          line-height: 1.65;
+      }
+
+      &__bottom {
+         margin-top: 93px;
+         margin-bottom: 130px;
+      }
+      &__item {
+         font-size: 20px;
+         line-height: 1.65;
+
+         height: 102px;
+         padding-left: 82px;
+
+         flex: 1 0 33.3%;
+
+         &:not(:last-child) {
+            margin-bottom: 0;
+         }
+
+         &:nth-child(1) {
+            background-position: left 25px center, left center;
+            background-size: 40px 46px, 100px 102px;
+         }
+         &:nth-child(2) {
+            background-position: left 22px center, left center;
+            background-size: 48px 47px, 100px 102px;
+         }
+         &:nth-child(3) {
+            background-position: left 24px center, left center;
+            background-size: 42px 48px, 100px 102px;
+         }
       }
    }
 }
