--- a/css/main.css
+++ b/css/main.css
@@ -653,7 +653,8 @@ svg {
   left: 48%;
   transform-origin: bottom center;
   animation-name: flame;
-  animation-duration: 1500ms;
+  animation-duration: 1000ms;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   animation-iteration-count: infinite;
 }
 
@@ -662,12 +663,9 @@ svg {
     fill: #ff5e00;
     transform: rotate(0deg);
   }
-  25% {
-    transform: translateY(-3px) rotate(7deg);
-  }
   50% {
     fill: #ff6b09;
-    transform: translateY(-3px);
+    transform: translateY(-3px) rotate(3deg);
   }
   100% {
     transform: rotate(0deg);
