--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,8 @@
    left: 48%;
    transform-origin: bottom center;
    animation-name: flame;
-   animation-duration: 1500ms;
+   animation-duration: 1000ms;
+   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    animation-iteration-count: infinite;
 }
 
@@ -52,13 +53,13 @@
       fill: rgb(255, 94, 0);
       transform: rotate(0deg);
    }
-   25% {
-      transform: translateY(-3px) rotate(7deg);
-   }
+   //    25% {
+   //       transform: translateY(-3px) rotate(3deg);
+   //    }
    50% {
       //   transform: rotate(7deg);
       fill: #ff6b09;
-      transform: translateY(-3px);
+      transform: translateY(-3px) rotate(3deg);
    }
 
    100% {
